--- a/src/uikit/uikit.module.sass
+++ b/src/uikit/uikit.module.sass
@@ -1,27 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Quicksand:wght@300;400&family=Roboto:wght@300&display=swap')
+
+$primary: #4074a5
+$primary-transparency-soft: #4074a59f
+$primary-transparency-hard: #4074a530
+
 .searchInput
-    width: 24vw
-    height: 2.7vh
-    border: 0.1vw solid #4074a59f
-    border-radius: 0.8vw
+    width: 320px
+    height: 35px
+    border: 1px solid $primary-transparency-soft
+    border-radius: 10px
     background-color: #00000000
-    color: #4074a5
-    font-size: 1.4vw
-    padding: 1.5vw 1.5vw 1.5vw 2.2vw
+    color: $primary
+    font-size: 18px
+    padding: 10px 10px 10px 15px
 
     &::placeholder
-        color: #4074a59f
+        color: $primary-transparency-soft
 
 .movieCardContainer
     display: flex
     justify-content: center
     align-items: center
-    width: 24vw
+    width: 320px
     aspect-ratio: 1/1.4
-    border-radius: 1vw
-    border: 0.2vw solid #4074a59f
-    background-color: #4074a530
-    margin-top: 2vh
+    border-radius: 10px
+    border: 2px solid $primary-transparency-soft
+    background-color: $primary-transparency-hard
+    margin-top: 20px
 
     img
         width: 50%
@@ -35,7 +40,7 @@
         flex-direction: column
         justify-content: flex-start
         align-items: center
-        gap: 1.4vh
+        gap: 14px
         padding: 5%
         overflow: scroll
 
@@ -46,7 +51,7 @@
             width: 90%
             display: flex
             flex-direction: column
-            gap: 1.2vh
+            gap: 12px
             font-weight: 300
             opacity: 0
 
@@ -58,7 +63,7 @@
                 width: 100%
 
                 .title
-                    font-size: 1.4vw
+                    font-size: 18px
                     color: #000000
                     white-space: nowrap
                     overflow: hidden
@@ -68,9 +73,9 @@
                         font-weight: 500
 
                 .director
-                    font-size: 0.7vw
+                    font-size: 10px
                     color: #8d8d8d
-                    margin-left: 0.5vw
+                    margin-left: 8px
                     white-space: nowrap
                     overflow: hidden
 
@@ -113,18 +118,13 @@
             cursor: default
             transition: opacity 500ms ease-in-out
         
-        
 
-
-        
-        
-      
 .switchContainer
     margin-top: 20px
     width: 230px
     height: 75px
     border-radius: 17px
-    background-color: #4074a530
+    background-color: $primary-transparency-hard
     display: grid
     padding: 9px
     padding-left: 0
@@ -183,7 +183,7 @@
             left: 0
             right: 0
             bottom: 0
-            background-color: #4074a527
+            background-color: $primary-transparency-hard
             -webkit-transition: .4s
             transition: .4s
             border-radius: 7px
@@ -202,7 +202,72 @@
                 border-radius: 9px
                 background-color: #2E2E2E2B
         
+.matchTokenContainer
+    display: grid
+    width: 500px
+    height: 130px
+    grid-template-columns: 37% 26% 37%
+    margin-top: 20px
 
-    
-    
-            
+    .movieMiniLeft, .movieMiniRight
+        position: relative
+        width: 100%
+        height: 100%
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        border-radius: 10px
+        background-size: cover
+        background-repeat: no-repeat
+        background-position: center
+        text-align: center
+
+        .matchRole, .matchName
+            color: white
+            z-index: 4
+
+        .matchRole
+            font-size: 30px
+            line-height: 30px
+
+        .matchName
+            font-size: 12px
+            margin-top: 7px
+    .movieMiniRight
+        &::after
+            content: ""
+            position: absolute
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            background: linear-gradient(90deg, rgba(56, 56, 56, 0.60) 0.36%, #191919 99.38%, rgba(86, 86, 86, 0.00) 99.72%)
+            border-radius: 10px
+
+                
+    .movieMiniLeft
+        &::after
+            content: ""
+            position: absolute
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            background: linear-gradient(90deg, #191919 0.36%, rgba(56, 56, 56, 0.60) 99.72%, rgba(86, 86, 86, 0.00) 99.72%)
+            border-radius: 10px
+            z-index: 3
+
+
+    .matchedPhoto
+        width: 100%
+        height: 100%
+        display: flex
+        justify-content: center
+        align-items: center
+
+        img
+            width: 80%
+            height: 100%
+            border-radius: 12px
+
